tests/ui/nll/borrowed-referent-issue-38899.stderr
error[E0502]: cannot borrow `*block.current` as immutable because it is also borrowed as mutable
  --> $DIR/borrowed-referent-issue-38899.rs:11:21
   |
LL |     let x = &mut block;
   |             ---------- mutable borrow occurs here
LL |     println!("{}", x.current);
LL |     let p: &'a u8 = &*block.current;
   |                     ^^^^^^^^^^^^^^^ immutable borrow occurs here
LL |
LL |     drop(x);
   |          - mutable borrow later used here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0502`.
